# rust-training-copy

./: .gitignore  Cargo.toml
src/: cli.rs  main.rs
