[package]
name = "trin-copy"
version = "0.1.0"
authors = ["johndoe0x <johndoe0x@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = ["blocking"] }
serde_json = "1.0.59"
threadpool = "1.8.1"
